# badi_user

./: .gitignore  info.txt  manage.py  requirements.txt
src/: MANIFEST.in  README.md  pyproject.toml  setup.py
src/badi_blog/: apps.py  filter.py  models.py  views.py
src/badi_blog/api/: api.py  routers.py  serializers.py
src/badi_blog/templates/blog/: blog-detail.html
src/badi_blog/templates/blogbanner/: blogbanner_update.html
src/badi_blog/templates/blogcategory/: blogcategory_create.html  blogcategory_update.html
src/badi_blog/templates/blogcomment/: blogcomment_list.html
src/badi_blog/templatetags/: blog_filter.py
src/badi_blog/ui/: urls.py  views.py
src/badi_ticket/: apps.py  models.py  serializers.py  urls.py  views.py
src/badi_user/: filter.py  models.py
src/badi_user/api/: api.py  routers.py  serializers.py
src/badi_user/templates/: badi-user-test.html
src/badi_user/templatetags/: appfilter.py
src/badi_user/ui/: forms.py  log_views.py  member_views.py  roles_views.py  urls.py  views.py
src/badi_utils/: dynamic.py  dynamic_api.py  dynamic_models.py  errors.py  logging.py  rss.py  sms.py  validations.py
src/badi_utils/templatetags/: badi_utils.py
src/badi_visit/: apps.py  models.py
src/badi_visit/api/: api.py  routers.py  serializers.py
src/badi_visit/ui/: urls.py  views.py
src/badi_wallet/: action.py  admin.py  filter.py  models.py
src/badi_wallet/api/: routers.py  serializers.py  view_sets.py
src/badi_wallet/ui/: urls.py  views.py
src/ver-01/: badi_users-0.0.1-py3-none-any.whl  badi_users-0.0.2-py3-none-any.whl
(+345 files in other folders)
