[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "badi_utils"
version = "0.1.1"
authors = [
  { name="Mohammad Shekari Badi", email="Ad.BadiDesign@gmail.com" },
]
description = "Python Django Utils"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BadiDesign/badi_utils"
"Bug Tracker" = "https://github.com/BadiDesign/badi_utils/issues"
